<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>io.avaje</groupId>
    <artifactId>avaje-nima-parent</artifactId>
    <version>0.1</version>
  </parent>

  <artifactId>test-avaje-nima</artifactId>

  <properties>
<!--    <java.release>19</java.release>-->
<!--    <maven.compiler.source>19</maven.compiler.source>-->
<!--    <maven.compiler.target>19</maven.compiler.target>-->
<!--    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>-->
    <surefire.useModulePath>false</surefire.useModulePath>
  </properties>


  <dependencies>

    <dependency>
      <groupId>io.avaje</groupId>
      <artifactId>avaje-nima</artifactId>
      <version>0.1</version>
    </dependency>

    <dependency>
      <groupId>io.avaje</groupId>
      <artifactId>avaje-nima-test</artifactId>
      <version>0.1</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>io.avaje</groupId>
      <artifactId>junit</artifactId>
      <version>1.1</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>io.avaje</groupId>
      <artifactId>avaje-inject-test</artifactId>
      <version>9.0-RC3</version>
      <scope>test</scope>
    </dependency>

  </dependencies>


  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.10.1</version>
        <configuration>
          <release>19</release>
          <compilerArgs>
            --enable-preview
          </compilerArgs>
          <annotationProcessorPaths>
            <path>
              <groupId>io.avaje</groupId>
              <artifactId>avaje-http-nima-generator</artifactId>
              <version>1.33</version>
            </path>
            <path>
              <groupId>io.avaje</groupId>
              <artifactId>avaje-inject-generator</artifactId>
              <version>9.0-RC3</version>
            </path>
            <path>
              <groupId>io.avaje</groupId>
              <artifactId>avaje-jsonb-generator</artifactId>
              <version>1.4-RC6</version>
            </path>
          </annotationProcessorPaths>
        </configuration>
      </plugin>

    </plugins>
  </build>
</project>
